alterando as activity de atendimento

--- a/app/src/main/res/layout/activity_atendimento.xml
+++ b/app/src/main/res/layout/activity_atendimento.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -14,7 +15,7 @@
 
         android:layout_height="wrap_content"
 
-        android:background="#3ba0e2" >
+        android:background="@color/azul_escuro">
 
 
         <ImageView
@@ -31,16 +32,10 @@
             tools:srcCompat="@drawable/logoclin" />
 
         <TextView
-
             android:id="@+id/textView1"
-
             android:layout_width="wrap_content"
-
             android:layout_height="wrap_content"
-
-            android:textAppearance="?android:attr/textAppearanceLarge"
-
-            />
+            android:textAppearance="?android:attr/textAppearanceLarge" />
 
         <LinearLayout
 
@@ -50,23 +45,17 @@
 
             android:layout_height="match_parent"
 
-            android:background="#54B2D8"
+            android:background="@color/azul_escuro"
 
-            android:gravity="center" >
+            android:gravity="center">
 
             <TextView
-
                 android:id="@+id/textView2"
-
                 android:layout_width="wrap_content"
-
                 android:layout_height="wrap_content"
-
                 android:text="@string/atendimentos"
-
                 android:textAppearance="?android:attr/textAppearanceLarge"
-
-                android:textColor="#000000" />
+                android:textColor="@color/white" />
 
         </LinearLayout>
 
@@ -233,7 +222,7 @@
 
         android:gravity="center"
 
-        android:paddingTop="0dp" >
+        android:paddingTop="0dp">
 
 
         <ImageView
@@ -302,68 +291,67 @@
     </LinearLayout>
 
     <LinearLayout
-
         android:layout_width="match_parent"
-
-        android:layout_height="wrap_content"
-
+        android:layout_height="50dp"
         android:gravity="center"
-
-        android:paddingTop="0dp" >
-
+        android:paddingTop="0dp">
 
         <TextView
-
             android:id="@+id/txtstatus_atendimento"
-
-            android:layout_width="77dp"
-
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-
             android:contentDescription="@string/status"
-
+            android:gravity="center"
             android:textAppearance="?android:attr/textAppearanceLarge"
             tools:ignore="TextSizeCheck"
             tools:text="@string/status" />
 
     </LinearLayout>
 
-    <LinearLayout
-
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-
-        android:layout_height="wrap_content"
-
-        android:gravity="center" >
+        android:layout_height="match_parent">
 
         <Button
-
             android:id="@+id/btalteraratendimento"
-
             android:layout_width="wrap_content"
-
             android:layout_height="wrap_content"
-
+            android:backgroundTint="@color/azul"
             android:text="@string/alterar"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.507"
+            app:layout_constraintStart_toEndOf="@+id/btexcluiratendimento"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.281"
             tools:ignore="DuplicateSpeakableTextCheck" />
 
         <Button
-
             android:id="@+id/btexcluiratendimento"
-
             android:layout_width="wrap_content"
-
             android:layout_height="wrap_content"
-
+            android:backgroundTint="@color/vermelho"
             android:text="@string/excluir"
-            tools:ignore="DuplicateSpeakableTextCheck" />
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.54"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.281" />
 
         <Button
             android:id="@+id/btvoltara"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/voltar" />
-
-    </LinearLayout>
+            android:backgroundTint="#CCCCCC"
+            android:text="@string/voltar"
+            android:textColor="@android:color/black"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toStartOf="@+id/btexcluiratendimento"
+            app:layout_constraintHorizontal_bias="0.569"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.281" />
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
 </LinearLayout>
