--- a/app/src/main/res/layout/activity_grava_pacientes.xml
+++ b/app/src/main/res/layout/activity_grava_pacientes.xml
@@ -16,9 +16,9 @@
             android:layout_width="72dp"
             android:layout_height="72dp"
             android:contentDescription="@string/todo"
-            android:src="@drawable/iconuser"
+            android:src="@drawable/add_user"
             tools:ignore="ImageContrastCheck"
-            tools:srcCompat="@drawable/iconuser" />
+            tools:srcCompat="@drawable/add_user" />
 
         <TextView
             android:id="@+id/textView1"
