--- a/app/src/main/res/layout/activity_grava_atendimentos.xml
+++ b/app/src/main/res/layout/activity_grava_atendimentos.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -9,45 +10,46 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="#3ba0e2" >
+        android:background="@color/azul_escuro">
 
         <ImageView
             android:id="@+id/iconuser"
             android:layout_width="72dp"
             android:layout_height="72dp"
             android:contentDescription="@string/todo"
-            android:src="@drawable/iconuser"
+            android:src="@drawable/novo_atendimento"
             tools:ignore="ImageContrastCheck"
-            tools:srcCompat="@drawable/iconuser" />
+            tools:srcCompat="@drawable/novo_atendimento" />
 
         <TextView
             android:id="@+id/textView1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textAppearance="?android:attr/textAppearanceLarge"
-            />
+            android:textAppearance="?android:attr/textAppearanceLarge" />
+
         <LinearLayout
             android:id="@+id/layoutCorFundo"
             android:layout_width="fill_parent"
             android:layout_height="match_parent"
-            android:background="#4B0EA3"
-            android:gravity="center" >
+            android:background="@color/azul_escuro"
+            android:gravity="center">
 
             <TextView
                 android:id="@+id/textView2"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/gerar_atendimentos"
+                android:text="@string/novo_atendimento"
                 android:textAppearance="?android:attr/textAppearanceLarge"
-                android:textColor="#FFFFFF"
+                android:textColor="@color/white"
                 tools:ignore="TextContrastCheck" />
         </LinearLayout>
     </LinearLayout>
+
     <LinearLayout
         android:id="@+id/layoutImagemFundo"
         android:layout_width="match_parent"
         android:layout_height="fill_parent"
-        android:orientation="vertical" >
+        android:orientation="vertical">
 
         <TextView
             android:id="@+id/textView4"
@@ -144,23 +146,36 @@
             android:textColorHint="#546E7A"
             tools:ignore="VisualLintTextFieldSize" />
 
-        <LinearLayout
+        <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
-            android:layout_height="fill_parent"
-            android:gravity="center" >
-
-            <Button
-                android:id="@+id/btcadastrarAtendimento"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/cadastrar" />
+            android:layout_height="match_parent">
 
             <Button
                 android:id="@+id/btvoltarca"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/voltar" />
+                android:backgroundTint="@color/azul"
+                android:text="@string/voltar"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toStartOf="@+id/btcadastrarAtendimento"
+                app:layout_constraintHorizontal_bias="0.49"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintVertical_bias="0.355" />
 
-        </LinearLayout>
+            <Button
+                android:id="@+id/btcadastrarAtendimento"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:backgroundTint="@color/azul"
+                android:text="@string/cadastrar"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.797"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintVertical_bias="0.355" />
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
     </LinearLayout>
 </LinearLayout>
