--- a/app/src/main/res/layout/activity_grava_funcionarios.xml
+++ b/app/src/main/res/layout/activity_grava_funcionarios.xml
@@ -1,14 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical" >
+    android:orientation="vertical"
+    tools:context="br.com.sgap.ui.activity.GravaFuncionariosActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="#3ba0e2" >
+        android:background="@color/azul_escuro">
 
         <ImageView
             android:id="@+id/iconuser"
@@ -23,14 +25,14 @@
             android:id="@+id/textView1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textAppearance="?android:attr/textAppearanceLarge"
-            />
+            android:textAppearance="?android:attr/textAppearanceLarge" />
+
         <LinearLayout
             android:id="@+id/layoutCorFundo"
             android:layout_width="fill_parent"
             android:layout_height="match_parent"
-            android:background="#4B0EA3"
-            android:gravity="center" >
+            android:background="@color/azul_escuro"
+            android:gravity="center">
 
             <TextView
                 android:id="@+id/textView2"
@@ -42,11 +44,12 @@
                 tools:ignore="TextContrastCheck" />
         </LinearLayout>
     </LinearLayout>
+
     <LinearLayout
         android:id="@+id/layoutImagemFundo"
         android:layout_width="match_parent"
         android:layout_height="fill_parent"
-        android:orientation="vertical" >
+        android:orientation="vertical">
 
         <TextView
             android:id="@+id/textView4"
@@ -55,6 +58,7 @@
             android:text="@string/complete_os_campos_para_registrar_as_informa_es_do_f_ncionario"
             android:textAppearance="?android:attr/textAppearanceLarge"
             android:textSize="18sp" />
+
         <TextView
             android:id="@+id/textView3"
             android:layout_width="wrap_content"
@@ -99,6 +103,7 @@
             android:minHeight="48dp"
             android:textColorHint="#546E7A"
             tools:ignore="VisualLintTextFieldSize" />
+
         <TextView
             android:id="@+id/TextView02"
             android:layout_width="wrap_content"
@@ -141,23 +146,37 @@
             android:textColorHint="#546E7A"
             tools:ignore="VisualLintTextFieldSize" />
 
-        <LinearLayout
+        <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
-            android:layout_height="fill_parent"
-            android:gravity="center" >
+            android:layout_height="match_parent">
 
             <Button
                 android:id="@+id/btcadastrarFuncionario"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/cadastrar" />
+                android:layout_marginEnd="68dp"
+                android:backgroundTint="@color/azul"
+                android:text="@string/cadastrar"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.933"
+                app:layout_constraintStart_toEndOf="@+id/btvoltarcf"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintVertical_bias="0.389" />
 
             <Button
                 android:id="@+id/btvoltarcf"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/voltar" />
+                android:backgroundTint="@color/azul"
+                android:text="@string/voltar"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.263"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintVertical_bias="0.393" />
 
-        </LinearLayout>
+        </androidx.constraintlayout.widget.ConstraintLayout>
     </LinearLayout>
 </LinearLayout>
