--- a/app/src/main/res/layout/activity_pacientes.xml
+++ b/app/src/main/res/layout/activity_pacientes.xml
@@ -1,10 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
     tools:context="br.com.sgap.ui.activity.PacientesActivity">
+
     <LinearLayout
 
         android:id="@+id/linearLayout1"
@@ -13,7 +15,7 @@
 
         android:layout_height="wrap_content"
 
-        android:background="#F9F9FA" >
+        android:background="@color/azul_escuro">
 
 
         <ImageView
@@ -49,9 +51,9 @@
 
             android:layout_height="match_parent"
 
-            android:background="#305FD6"
+            android:background="@color/azul_escuro"
 
-            android:gravity="center" >
+            android:gravity="center">
 
             <TextView
 
@@ -65,7 +67,7 @@
 
                 android:textAppearance="?android:attr/textAppearanceLarge"
 
-                android:textColor="#000000" />
+                android:textColor="@color/white" />
 
         </LinearLayout>
 
@@ -198,7 +200,7 @@
 
         android:gravity="center"
 
-        android:paddingTop="0dp" >
+        android:paddingTop="0dp">
 
 
         <ImageView
@@ -267,68 +269,66 @@
     </LinearLayout>
 
     <LinearLayout
-
         android:layout_width="match_parent"
-
-        android:layout_height="wrap_content"
-
+        android:layout_height="50dp"
         android:gravity="center"
-
-        android:paddingTop="0dp" >
-
+        android:paddingTop="0dp">
 
         <TextView
-
             android:id="@+id/txtstatus_paciente"
-
-            android:layout_width="77dp"
-
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-
             android:contentDescription="@string/status"
-
+            android:gravity="center"
             android:textAppearance="?android:attr/textAppearanceLarge"
             tools:ignore="TextSizeCheck"
             tools:text="@string/status" />
 
     </LinearLayout>
 
-    <LinearLayout
-
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-
-        android:layout_height="wrap_content"
-
-        android:gravity="center" >
+        android:layout_height="match_parent">
 
         <Button
-
             android:id="@+id/btalterarp"
-
             android:layout_width="wrap_content"
-
             android:layout_height="wrap_content"
-
+            android:backgroundTint="@color/azul"
             android:text="@string/alterar"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/btexcluirp"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.371"
             tools:ignore="DuplicateSpeakableTextCheck" />
 
         <Button
-
             android:id="@+id/btexcluirp"
-
             android:layout_width="wrap_content"
-
             android:layout_height="wrap_content"
-
+            android:backgroundTint="@color/vermelho"
             android:text="@string/excluir"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.371"
             tools:ignore="DuplicateSpeakableTextCheck" />
 
         <Button
             android:id="@+id/btvoltarp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/voltar" />
+            android:backgroundTint="#CCCCCC"
+            android:text="@string/voltar"
+            android:textColor="@android:color/black"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toStartOf="@+id/btexcluirp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.371" />
 
-    </LinearLayout>
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
 </LinearLayout>
